--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -1,6 +1,9 @@
 <turbo-frame id="<%= dom_id(todo) %>">
   <div class="group flex items-center gap-4 h-12">
-    <%= form_with model: todo, style: "line-height: 0;" do |f| %>
+    <%= form_with model: todo,
+                  url: todo_path(todo, filters),
+                  **(filtering? ? { data: { turbo_frame: "_top" } } : {}),
+                  style: "line-height: 0;" do |f| %>
       <%= f.check_box :completed, class: "checkbox",
                                   onclick: (
                                     <<~JS
@@ -14,14 +17,14 @@
                     <<~JS
                       (function (label) {
                         var frame = label.closest("##{dom_id(todo)}");
-                        frame.src = "#{edit_todo_path(todo)}";
+                        frame.src = "#{edit_todo_path(todo, filters)}";
                       })(this);
                     JS
                   ) do %>
       <%= todo.title %>
     <% end %>
 
-    <%= button_to todo_path(todo),
+    <%= button_to todo_path(todo, filters),
                   method: :delete,
                   form: { data: { turbo_confirm: "Are you sure?", turbo_frame: "_top" } },
                   class: "btn btn-ghost btn-circle invisible group-hover:visible" do %>
