no validation failure handling, but at least 422s don't crash or infinite loop

--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -9,7 +9,7 @@
       <%= f.text_field :title, class: "input input-bordered w-full",
                                placeholder: "type here",
                                autocomplete: :off,
-                               autofocus: true,
+                               autofocus: @autofocus,
                                onfocus: (
                                  <<~JS
                                    (function autofocusCursorAtTheEnd(field, value) {
