--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -6,23 +6,25 @@
     <% end %>
 
     <%= form_with model: @todo, url: todo_path(@todo, filters), class: "w-full" do |f| %>
-      <%= f.text_field :title, class: "input input-bordered w-full",
-                               placeholder: "type here",
-                               autocomplete: :off,
-                               autofocus: @autofocus,
-                               onfocus: (
-                                 <<~JS
-                                   (function autofocusCursorAtTheEnd(field, value) {
-                                     field.value = '';
-                                     field.value = value;
-                                   })(this, this.value);
-                                 JS
-                               ),
-                               onblur: (
-                                 <<~JS
-                                   (function (field) { field.closest("form").requestSubmit(); })(this);
-                                 JS
-                               ) %>
+      <div class="form-control">
+        <%= f.text_field :title, class: "input input-bordered w-full",
+                                 placeholder: "type here",
+                                 autocomplete: :off,
+                                 autofocus: @autofocus,
+                                 onfocus: (
+                                   <<~JS
+                                     (function autofocusCursorAtTheEnd(field, value) {
+                                       field.value = '';
+                                       field.value = value;
+                                     })(this, this.value);
+                                   JS
+                                 ),
+                                 onblur: (
+                                   <<~JS
+                                     (function (field) { field.closest("form").requestSubmit(); })(this);
+                                   JS
+                                 ) %>
+      </div>
     <% end %>
 
     <%# don't show the delete button while editing %>
