--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,6 +8,8 @@
   <div class="navbar-end"></div>
 </nav>
 
+<%= turbo_stream_from(session_user.id) %>
+
 <div class="max-w-2xl mx-auto mt-4 px-[var(--navbar-padding,0.5rem)]">
   <section class="flex items-center gap-4">
     <%= render partial: "todos/forms/toggle", locals: { todos: @todos } %>
