--- a/app/views/todos/_todo.html.erb
+++ b/app/views/todos/_todo.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="<%= dom_id(todo) %>">
+<turbo-frame id="<%= dom_id(todo) %>" data-sort-code="<%= todo.created_at.to_i %>">
   <div class="group flex items-center gap-4 h-12">
     <%= form_with model: todo,
                   url: todo_path(todo, filters),
