--- a/app/views/todos/forms/_new.html.erb
+++ b/app/views/todos/forms/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: todo, url: todos_path(filters), id: dom_id(todo) do |f| %>
+<%= form_with model: todo, url: todos_path(try(:filters)), id: dom_id(todo) do |f| %>
   <div class="form-control">
     <%= f.text_field :title, class: "input input-bordered w-full",
                              placeholder: "what needs to be done?",
